google-sso/google-sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-sso-service
spec:
  selector:
    app: google-sso
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
