google-sso/google-sso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: google-sso-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: google-sso-service
            port:
              number: 80
